hide body scrollbars when editor is fullscreen

--- a/example/index.html
+++ b/example/index.html
@@ -25,6 +25,7 @@
     </style>
   </head>
   <body ng-controller='Ctrl'>
-    <markdown-textarea data='data' fileserver='/fileserver'/>
+    <markdown-textarea data='data' fileserver='/fileserver'></markdown-textarea>
+    <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
   </body>
 </html>
