--- a/example/index.html
+++ b/example/index.html
@@ -25,7 +25,7 @@
     </style>
   </head>
   <body ng-controller='Ctrl'>
-    <markdown-textarea data='data' fileserver='/fileserver'></markdown-textarea>
+    <markdown-textarea data='data' fileserver='"/fileserver"'></markdown-textarea>
     <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
   </body>
 </html>
